# agency-agents

./: .editorconfig  .gitattributes  .gitignore  AGENTS.json  ARCHITECTURE.html  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_zh-CN.md  README-zh.md  README.md  SECURITY.md  USE-CASES.md  agency-agents.pyproj  agency-agents.sln  agency-agents.slnx  agency_agents.py  agent-browser.html  divisions.json  generate_slnx.py  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt  suggested_deps.json  tools.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  release.yml
_solution/: Agents.csproj  Docs.csproj  SolutionItems.csproj
administration/: administration-contract-manager.md  administration-executive-assistant.md  administration-fleet-manager.md  administration-office-manager.md  administration-procurement.md  administration-records-management.md  administration-travel-manager.md
aerospace/: aerospace-atc-specialist.md  aerospace-avionics.md  aerospace-c4isr-electronic-warfare.md  aerospace-damage-protection-technology.md  aerospace-director.md  aerospace-engineering-advanced-air-mobility.md  aerospace-engineering-aircraft-structures.md  aerospace-engineering-aviation-biofuels.md  aerospace-engineering-aviation-economics.md  aerospace-engineering-aviation-engineering.md  aerospace-engineering-aviation-human-factors.md  aerospace-engineering-aviation-maintenance.md  aerospace-engineering-aviation-pilot-training.md  aerospace-engineering-aviation-safety.md  aerospace-engineering-aviation-sustainability.md  aerospace-engineering-drone-engineer.md  aerospace-engineering-planetary-science.md  aerospace-engineering-satellite-operations.md  aerospace-engineering-spacecraft-gnc.md  aerospace-engineering-systems-aerospace.md  aerospace-flight-test-engineer.md  aerospace-military-aviation-weapons.md  aerospace-military-civil-fusion.md  aerospace-military-materials-manufacturing.md  aerospace-military-theory-strategy.md  aerospace-naval-underwater-weapons.md  aerospace-propulsion.md  aerospace-satellite.md  aerospace-structures.md  aerospace-systems-engineer.md  aerospace-unmanned-intelligent-military.md  aerospace-weapon-systems-engineering.md
agriculture/: agriculture-agronomist.md  agriculture-economist.md  agriculture-engineering-aquaculture-fish.md  agriculture-engineering-iot-agriculture.md  agriculture-engineering-soil-science.md  agriculture-general-manager.md  agriculture-iot-engineer.md  agriculture-livestock-manager.md  agriculture-precision-farming.md  agriculture-quality-safety.md  agriculture-supply-chain.md  agriculture-sustainability.md
automotive/: automotive-adas-engineer.md  automotive-autonomous-driving.md  automotive-director.md  automotive-engineering-automotive-cae.md  automotive-engineering-automotive-engineer.md  automotive-engineering-automotive-homologation-test.md  automotive-engineering-automotive-lighting.md  automotive-engineering-automotive-software.md  automotive-engineering-automotive-systems.md  automotive-engineering-automotive-thermal.md  automotive-engineering-autonomous-optimization-architect.md  automotive-engineering-battery-modeling.md  automotive-engineering-electric-vehicle-aerodynamics.md  automotive-engineering-ev-charging.md  automotive-engineering-functional-safety.md  automotive-engineering-vehicle-bus.md  automotive-engineering-vehicle-dynamics.md  automotive-ev-battery.md  automotive-homologation.md  automotive-nvh-engineer.md  automotive-supply-chain.md  automotive-vehicle-architecture.md
beauty/: beauty-cosmetics-science.md  beauty-formulation.md  beauty-marketing.md  beauty-product-manager.md
construction/: construction-architectural-designer.md  construction-bim-engineer.md  construction-cost-estimator.md  construction-electrical.md  construction-engineering-acoustics-consultant.md  construction-engineering-acoustics-specialist.md  construction-engineering-bridge-structural.md  construction-fire-protection.md  (+32 more)
(+1411 files in other folders)
