[project]
name = "agency-agents"
version = "1.0.0"
description = "1000+ AI agent personality definitions for coding tools"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pyyaml>=6.0",
    "ruff>=0.5",
    "mypy>=1.0",
    "jsonschema>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["scripts"]
omit = [
    "scripts/_shared/__init__.py",
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"scripts/_shared/__init__.py" = ["F401"]
"scripts/batch-add-deps.py" = ["E701", "E702", "E741"]
"scripts/quality-report.py" = ["E402"]
"scripts/analyze-deps-auto.py" = ["B007"]
"scripts/i18n/check-i18n.py" = ["B007"]
"scripts/agent-lifecycle.py" = ["B007"]
"scripts/score-agents.py" = ["B007"]
"scripts/validate-index.py" = ["C401"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
